# rosProject

./: README.md  blockDiagram.uxf  diagram.uxf  nodesUml.uxf  readme.txt  styles.css
install/: local_setup.sh  setup.sh
install/cpp_publisher/lib/cpp_publisher/: listener  talker
install/cpp_publisher/share/ament_index/resource_index/parent_prefix_path/: cpp_publisher
install/cpp_publisher/share/cpp_publisher/: package.sh
install/image_input/lib/image_input/: image
install/image_input/share/image_input/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/keyboard_input/lib/keyboard_input/: keyboard_input
install/keyboard_input/share/keyboard_input/: local_setup.sh  package.bash  package.sh  package.zsh
install/log/: latest_list
install/paddle_physics/share/paddle_physics/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/paddle_physics/share/paddle_physics/cmake/: paddle_physicsConfig.cmake
install/pong_core/lib/pong_core/: physics
install/pong_core/share/pong_core/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/score/lib/score/: score
install/score/share/score/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/score/share/score/cmake/: scoreConfig.cmake
install/tutorial_interfaces/include/tutorial_interfaces/tutorial_interfaces/msg/: vel.hpp
install/tutorial_interfaces/include/tutorial_interfaces/tutorial_interfaces/msg/detail/: ball__functions.h  ball__struct.h  ball__struct.hpp  ball__traits.hpp  score__builder.hpp  score__functions.c  score__functions.h  score__rosidl_typesupport_fastrtps_c.h  score__rosidl_typesupport_introspection_c.h  score__rosidl_typesupport_introspection_cpp.hpp  score__traits.hpp  score__type_support.c  score__type_support.cpp  score__type_support.h  vel__builder.hpp  vel__functions.c  vel__rosidl_typesupport_introspection_c.h  vel__struct.hpp  vel__traits.hpp  vel__type_support.c  vel__type_support.cpp  vel__type_support.h
install/tutorial_interfaces/local/lib/python3.10/dist-packages/tutorial_interfaces/: _tutorial_interfaces_s.ep.rosidl_typesupport_c.c
install/tutorial_interfaces/local/lib/python3.10/dist-packages/tutorial_interfaces/msg/: __init__.py  _ball_s.c  _score.py
install/tutorial_interfaces/share/ament_index/resource_index/rosidl_interfaces/: tutorial_interfaces
install/tutorial_interfaces/share/tutorial_interfaces/: package.sh
install/tutorial_interfaces/share/tutorial_interfaces/msg/: Ball.idl
install/visualization_package/share/visualization_package/: package.bash  package.sh  package.xml  package.zsh
launch_ws/src/cpp_launch_example/: package.xml
log/: latest_build  latest_info  latest_list  latest_metadata
pong_ros_launch/: CMakeLists.txt  package.xml
pong_ros_launch/launch/: _launch.xml
src/cpp_publisher/: CMakeLists.txt  package.xml
src/cpp_publisher/src/: publisher_member_function.cpp  subscriber_member_function.cpp
src/image_input/: CMakeLists.txt  package.xml
src/image_input/include/: image_functions.h
src/image_input/src/: image_functions.cpp  subpub_light.cpp
src/keyboard_input/: README.md  package.xml
src/keyboard_input/src/: keyboard_input.cpp
src/paddle_physics/: CMakeLists.txt  package.xml
src/paddle_physics/src/: subpub_paddle_physics.cpp
src/pong_core/: CMakeLists.txt  package.xml
src/pong_core/include/: ball_physics.h  logic.h
src/pong_core/src/: ball_physics.cpp  logic.cpp  subpub_ball_physics.cpp  subpub_logic.cpp
src/pong_ros_bringup/: CMakeLists.txt  package.xml
src/pong_ros_bringup/launch/: _launch.xml
src/pong_ros_core/: CMakeLists.txt  package.xml
src/pong_ros_core/include/: BallPhysics.h  Constants.h  PongController.h  ball_physics.h  constants.h  logic.h
src/pong_ros_core/src/: BallPhysics.cpp  BallPhysicsNode.cpp  PongController.cpp  PongControllerNode.cpp  ball_physics.cpp  logic.cpp  subpub_ball_physics.cpp  subpub_logic.cpp
src/pong_ros_image_input/: CMakeLists.txt  package.xml
src/pong_ros_image_input/src/: LightPositionNode.cpp  image_functions.cpp  subpub_light.cpp
src/pong_ros_interfaces/: CMakeLists.txt  package.xml
src/pong_ros_interfaces/msg/: PlayersScores.msg
src/pong_ros_keyboard_input/: CMakeLists.txt  package.xml
src/pong_ros_keyboard_input/launch/: keyboard_input_launch.py
src/pong_ros_keyboard_input/src/: keyboard_input.cpp
src/pong_ros_paddles_physics/: CMakeLists.txt  package.xml
src/pong_ros_paddles_physics/include/: PaddlesController.h  PaddlesPhysics.h
src/pong_ros_paddles_physics/src/: PaddlesController.cpp  PaddlesControllerNode.cpp  PaddlesPhysics.cpp  PaddlesPhysicsNode.cpp  subpub_paddle_physics.cpp
src/pong_ros_score/: CMakeLists.txt  package.xml
src/pong_ros_score/include/: PlayersScores.h  score.h
src/pong_ros_score/src/: PlayersScores.cpp  PlayersScoresNode.cpp  score.cpp  subpub_score.cpp
src/pong_ros_visuals/: CMakeLists.txt  package.xml
src/pong_ros_visuals/include/: PongRosSdl.h  PongVisualization.h  Pong_field.h  SDL2_UI.h
src/pong_ros_visuals/src/: PongRosSdl.cpp  PongVisualization.cpp  PongVisualizationNode.cpp  Pong_field.cpp  SDL2_UI.cpp  my_node.cpp
src/score/: CMakeLists.txt  package.xml
src/score/include/: score.h
src/score/src/: score.cpp  subpub_score.cpp
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/visualization_package/: CMakeLists.txt  package.xml
src/visualization_package/include/: Pong_field.h  SDL2_UI.h
src/visualization_package/src/: Pong_field.cpp  SDL2_UI.cpp  my_node (copy).cpp  my_node.cpp  subscriber_node.cpp  subscriber_node_test_probably_not_needed.cpp
